@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-04T16:08:09Z",
-  "count_outdated" : 1367,
-  "uniques_outdated" : 327,
-  "count" : 1409,
-  "uniques" : 338,
+  "timestamp" : "2023-08-05T16:07:14Z",
+  "count_outdated" : 1369,
+  "uniques_outdated" : 328,
+  "count" : 1430,
+  "uniques" : 339,
   "views" : [
-    {
-      "timestamp": "2023-07-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-24T00:00:00Z",
       "count": 2,
@@ -73,6 +64,15 @@
       "count": 11,
       "count_minmax": [ 11, 11 ],
       "count_decinc": [ 0, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-05T00:00:00Z",
+      "count": 21,
+      "count_minmax": [ 21, 21 ],
+      "count_decinc": [ 0, 21 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
