@@ -1,12 +1,7 @@
 {
-  "count": 42,
+  "count": 61,
   "uniques": 11,
   "views": [
-    {
-      "timestamp": "2023-07-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-24T00:00:00Z",
       "count": 2,
@@ -40,6 +35,11 @@
     {
       "timestamp": "2023-08-04T00:00:00Z",
       "count": 11,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-05T00:00:00Z",
+      "count": 21,
       "uniques": 1
     }
   ]
