@@ -1,3 +1,12 @@
+2023-08-05T16:07:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5771606171 # 1790
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-05
+* notice: last 14d: unq all: 11 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 327 1367 / 338 1409
+* notice: next accum: outdated-unq outdated-all / unq all: 328 1369 / 339 1430
+* notice: prev exec diff / last date diff / accum: unq all: +1 +21 -0 -0 / +1 +21 -0 -0 / 1 21
+* notice: removed / changed dates: [2023-07-22] / [2023-08-05]
+
 2023-08-04T16:08:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5764260218 # 1787
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
